--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/leaflet": "^1.4.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.5.1",
+    "leaflet-control-geocoder": "^1.7.0",
     "primeicons": "^1.0.0",
     "primeng": "^8.0.0-rc.1",
     "rxjs": "~6.3.3",
